--- a/viewer.html
+++ b/viewer.html
@@ -284,7 +284,7 @@
 
     <script src="https://download.agora.io/sdk/release/AgoraRTC_N-4.20.0.js"></script>
     <script>
-        const API_URL = 'https://fieldlive-production.up.railway.app/api';
+        const API_URL = 'http://localhost:3001/api';
         let agoraClient = null;
         let viewerCountWS = null;
         let streamId = null;
@@ -292,9 +292,9 @@
 
         // Get stream ID from URL
         function getStreamIdFromUrl() {
-            // Get stream ID from URL query parameter: ?stream=STREAM-ID
-    const urlParams = new URLSearchParams(window.location.search);
-    return urlParams.get('stream');
+            const path = window.location.pathname;
+            const match = path.match(/\/watch\/([a-zA-Z0-9-]+)/);
+            return match ? match[1] : null;
         }
 
         // Initialize
@@ -448,7 +448,7 @@
         function connectViewerCountWS() {
             if (!streamId) return;
 
-            viewerCountWS = new WebSocket(`wss://fieldlive-production.up.railway.app/ws/${streamId}`);
+            viewerCountWS = new WebSocket(`ws://localhost:3001/ws/${streamId}`);
 
             viewerCountWS.onopen = () => {
                 console.log('Connected to viewer count updates');
